--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<header class="singolo__header" id="header">
+<header class="singolo__header" id="home">
     <div class="container">
         <a href="#" class="singolo__logo"><h1>SINGOLO</h1></a>
         <nav class="singolo__nav">
             <ul class="nav__list" id='main-menu'>
-                <li class="nav__item"><a class="nav__link nav__link--active" href="#header">HOME</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="#home">HOME</a></li>
                 <li class="nav__item"><a class="nav__link" href="#services">SERVICES</a></li>
                 <li class="nav__item"><a class="nav__link" href="#portfolio">PORTFOLIO</a></li>
                 <li class="nav__item"><a class="nav__link" href="#team">ABOUT</a></li>
@@ -24,31 +24,8 @@
     </div>
 </header>
 
-<!-- <section class="singolo__slider">
-    <div class="container">
-        <ul class="slider__list">
-            <li class="slider__item">
-                <span class="img-wrapper">
-                    <img class="slider__img slider__img--left" src="./assets/img/iPhoneVertical.png" alt="">
-                    <span class="lcd__phone lcd__phone--left"></span>
-                    <button class="btn__phone btn__phone--left"></button>
-                </span>
-                <span class="img-wrapper">
-                    <img class="slider__img slider__img--right" src="./assets/img/iPhoneHorizontal.png" alt="">
-                    <span class="lcd__phone lcd__phone--right"></span>
-                    <button class="btn__phone  btn__phone--right"></button>
-                </span>
-                
-            </li>
-            <li class="slider__item">
-                <img class="slider__img slider__img--left" src="./assets/img/slide2.png" alt="">
-            </li>
-        </ul>
-        <a href="#" class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
-        <a href="#" class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
-    </div>
-</section> -->
-<div id="slider" class="slider">
+
+<section id="slider" class="slider">
     <div class="wrapper">
       <div id="slides" class="slides">
         <div class="slide">
@@ -74,7 +51,7 @@
     </div>
     <a class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
     <a class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
-  </div>
+  </section>
 
 
 <section class="singolo__services" id='services'>
