feat: add support for screens with a width of 1020px, 768px

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
     </div>
 </header>
 
+  <section class="singolo__slider">
 
-<section id="slider" class="slider">
-    <div class="wrapper">
-      <div id="slides" class="slides">
-        <div class="slide">
-            <div class="container">
+        <ul class="slider__list">
+            <li class="slider__item">
+                <div class="container">
                 <span class="img-wrapper">
                     <img class="slider__img slider__img--left" src="./assets/img/iPhoneVertical.png" alt="">
                     <span class="lcd__phone lcd__phone--left"></span>
@@ -41,17 +40,18 @@
                     <button class="btn__phone  btn__phone--right"></button>
                 </span>
             </div>
-        </div>
-        <div class="slide slide-blue">
-            <div class="container">
+            </li>
+            <li class="slider__item slider__item--bg">
+                <div class="container">
                 <img class="slider__img slider__img--left" src="./assets/img/slide2.png" alt="">
             </div>
-        </div>
-      </div>
-    </div>
-    <a class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
-    <a class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
-  </section>
+            </li>
+
+        </ul>
+        <a href="#" class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
+        <a href="#" class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
+
+</section>
 
 
 <section class="singolo__services" id='services'>
@@ -104,10 +104,12 @@
         </ul>
     </div>
 </section>
+
+
 <section class="singalo__portfolio" id="portfolio">
     <div class="container">
         <h2 class="portfolio__title singalo__title">Portfolio</h2>
-        <p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <p class="portfolio__description">Duis mollis, est non commodo luctus luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         <ul class="portfolio__filter filter__items">
             <li class="filter__item"><a class="filter__link filter__link--active">All</a></li>
             <li class="filter__item"><a class="filter__link">Web Design</a></li>
