feat: site adaptation for 375px, add menu for mobile

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <header class="singolo__header" id="home">
     <div class="container">
         <a href="#" class="singolo__logo"><h1>SINGOLO</h1></a>
+        <span class="hamburgerrr">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </span>
         <nav class="singolo__nav">
             <ul class="nav__list" id='main-menu'>
                 <li class="nav__item"><a class="nav__link nav__link--active" href="#home">HOME</a></li>
@@ -24,7 +29,7 @@
     </div>
 </header>
 
-  <section class="singolo__slider">
+  <section class="singolo__slider" id="slider">
 
         <ul class="slider__list">
             <li class="slider__item">
